k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: default
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  ports:
  - name: http 
    port: 80
    targetPort: 5000
  type: ClusterIP
